--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Andre van de Ven</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Andre van de Ven</h1>
