--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
     <head>
         <title>Andre van de Ven</title>
         <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Andre van de Ven</h1>
-        <h2>UPenn 2026</h2>
-        <p>Hi! I'm a freshman at Penn studying neuroscience.</p>
-        <p>My hobbies include:</p>
-        <ul>
-            <li>Scuba diving</li>
-            <li>Underwater photography</li>
-            <li>Reading</li>
-            <li>Playing video games</li>
-        </ul>
-        <a href="https://www.andrevandeven.us/">Photography Website</a>
-        <a href="https://github.com/andrevandeven">GitHub</a>
+        <div class="page-container">
+            <div class="page-header">
+                <h1>Andre van de Ven</h1>
+                <h2>UPenn 2026</h2>
+            </div>
+            <div class="info-container">
+                <img src="https://lh4.googleusercontent.com/FBFSHTuGhDvMpOkjvJYJee_KWoqOauSBgPoebQFxn85kImRmoyitml4jvrDfphPrjO8l3C1NloYt4d6-T5rq3nBQyDmu4EGspM2z1BhM1B_UPyTTZQyuRYayg2-e9HAecA=w1280" alt="me">
+                <img src="IMG_4760.jpg" alt="me1">
+                <div class="personalInfo">
+                    <p>Hi! I'm a freshman at Penn studying neuroscience.</p>
+                    <p>My hobbies include:</p>
+                    <ul>
+                        <li>Scuba diving</li>
+                        <li>Underwater photography</li>
+                        <li>Reading</li>
+                        <li>Playing video games</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="links">
+                <a href="https://www.andrevandeven.us/">Photography Website</a>
+                <a href="https://github.com/andrevandeven">GitHub</a>
+            </div>
+        </div>
     </body>
 </html>
