--- a/index.html
+++ b/index.html
@@ -12,17 +12,26 @@
                 <h2>UPenn 2026</h2>
             </div>
             <div class="info-container">
-                <img src="https://lh4.googleusercontent.com/FBFSHTuGhDvMpOkjvJYJee_KWoqOauSBgPoebQFxn85kImRmoyitml4jvrDfphPrjO8l3C1NloYt4d6-T5rq3nBQyDmu4EGspM2z1BhM1B_UPyTTZQyuRYayg2-e9HAecA=w1280" alt="me">
-                <img src="IMG_4760.jpg" alt="me1">
+                <div class="top-pics">
+                    <img src="https://lh4.googleusercontent.com/FBFSHTuGhDvMpOkjvJYJee_KWoqOauSBgPoebQFxn85kImRmoyitml4jvrDfphPrjO8l3C1NloYt4d6-T5rq3nBQyDmu4EGspM2z1BhM1B_UPyTTZQyuRYayg2-e9HAecA=w1280" alt="me">
+                </div>
+                <div class="top-pics">
+                    <img src="IMG_4760.jpg" alt="me1">
+                </div>
                 <div class="personalInfo">
-                    <p>Hi! I'm a freshman at Penn studying neuroscience.</p>
-                    <p>My hobbies include:</p>
-                    <ul>
-                        <li>Scuba diving</li>
-                        <li>Underwater photography</li>
-                        <li>Reading</li>
-                        <li>Playing video games</li>
-                    </ul>
+                    <div class="infoText">
+                        <p>Hi! I'm a freshman at Penn studying neuroscience.</p>
+                        <p>My hobbies include:</p>
+                        <ul>
+                            <li>Scuba diving</li>
+                            <li>Underwater photography</li>
+                            <li>Reading</li>
+                            <li>Playing video games</li>
+                        </ul>
+                    </div>
+                    <div class="bottom-pic">
+                        <img src="IMG_9216.jpeg" alt="me-and-ana">
+                    </div>
                 </div>
             </div>
             <div class="links">
