changed photo from link to file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <div class="info-container">
                 <div class="top-pics">
-                    <img src="https://lh4.googleusercontent.com/FBFSHTuGhDvMpOkjvJYJee_KWoqOauSBgPoebQFxn85kImRmoyitml4jvrDfphPrjO8l3C1NloYt4d6-T5rq3nBQyDmu4EGspM2z1BhM1B_UPyTTZQyuRYayg2-e9HAecA=w1280" alt="me">
+                    <img src="andre-diving.jpeg" alt="me">
                 </div>
                 <div class="top-pics">
                     <img src="IMG_4760.jpg" alt="me1">
